# avatarai-social

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  clean_openapi.py  cleaned_openapi.yaml  go.mod  go.sum  json_test.go  lexgen-build.json  openapi.yaml  private.pem
at_demo/: atp.py  ava.py  chat_stream.py  info.txt  pds.env  pds_account.py  plc.py  token2audio.py
cmd/atpgen/: main.go
cmd/atptest/: main.go
cmd/engine/: main.go
cmd/jwk/: main.go
conf/: default.yaml
data/: avatarai.sqlite
docs/: activity-api.md  chat.md  chat_interrupt_design.md  drafts.md  file.md  mcp-server-oauth.md  mcp_oauth_client_usage.md  moments.md  thread.md
mcp-server-demo/: main.py  pyproject.toml
mcp/servers/github-mcp/: main.py  pyproject.toml
mcp/servers/github-mcp/mcp_github/: __main__.py  auth_server.py  github_oauth_provider.py  server.py  token_verifier.py
pkg/api/: apiserver.go  aster.go  avatar.go  blobs.go  chat.go  feeds.go  login.go  messages.go  moment.go  oauth.go  responses.go  templater.go
pkg/asyncrecv/: recv.go
pkg/atproto/: README.md  auth.go  client_metadata.go  identity.go  oauth.go  xrpc.go
pkg/avatarai/: avatar.go  engine.go
pkg/config/: config.go  loader.go
pkg/database/: atp.go  avatar.go  error.go  file.go  messages.go  meta.go  models.go  moment.go  oauth.go  types.go
proto/: chat.go  client_event.proto  event.proto  realtime.proto  response.proto  server_event.proto  session.proto
types/: api_context.go  cards.go  file.go  mcp.go  mcp_oauth.go  moment.go  user.go
web/: README.md  index.html  oauth-callback.html
(+189 files in other folders)
