[project]
name = "github-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "AvatarAI" }]
keywords = ["mcp", "llm", "automation", "web", "fetch", "http", "github"]
license = { text = "MIT" }
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0",
    "httpx>=0.27",
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git@main",
    "starlette",
    "uvicorn"
]

[project.scripts]
mcp-github = "mcp_github.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_github"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["mcp_github"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]